  argument of the command to be run.  While POSIX allows this for -exec, this is
  deemed insecure as an attacker could influence which files could be found.

  find now issues a warning when the punctuation operators '(', ')', '!' and ','
  are passed with a leading dash, e.g. '-!'.  Future releases will not accept
  that any more.  Accepting that was rather a bug "since the beginning".

** Documentation Changes

  The forthcoming Issue 8 of the POSIX standard will standardise "find
  -print0" and "xargs -0".  Our documentation now points this out.

  The code example for "Finding the Shallowest Instance" in the Texinfo manual
  and the corresponding one in the EXAMPLES section in the find.1 man page have
  been fixed.  [#62259]

  Translators contributed numerous fixes for issues in the find.1 man page.

  The list of actions that suppress the default -print action has been
  supplemented with the missing '-print0' and '-fprint0' actions.


* Noteworthy changes in release 4.10.0 (2024-06-01) [stable]

** Bug Fixes

  Find now defaults to optimization level 1 rather than 2 and the
  cost-based optimizer will only run at level 2 and above.  This
  should prevent changes of operation order which result in
  user-visible differences in behaviour. [#58427]

  If the -P option to xargs is not used, xargs will not change the way
  in which the SIGUSR1 and SIGUSR2 signals are handled.  This means
  that they will cause the program to terminate if the signals were
  not ignored in the process which started xargs.  This also means that
  xargs does not use parallel execution at all.
  If you start xargs with '-P 1', then xargs will not be killed by these
  signals, and they instead change the degree of parallelism.
  This change improves xargs' POSIX compliance.

  'xargs -P' now waits for all its child processes to complete before
  exiting, even if one of them exits with status 255. [#64451]

  If the -P option of xargs is in use, reads on standard input which are