@@ -1624,10 +1624,12 @@ them.
 There are two ways to avoid searching certain filesystems.  One way is
 to tell @code{find} to only search one filesystem:
 
+@deffn Option -mount
+Ignore files on other devices.
+@end deffn
+
 @deffn Option -xdev
-@deffnx Option -mount
-Don't descend directories on other filesystems.  These options are
-synonyms.
+Don't descend into directories on other devices.
 @end deffn
 
 The other way is to check the type of filesystem each file is on, and
